--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -25,6 +25,6 @@
         }
     },
 
-    // GPUの確認コマンド
+    // GPU確認用のコマンド
     "postCreateCommand": "nvidia-smi && python -c 'import tensorflow as tf; print(\"TensorFlow version:\", tf.__version__); print(\"GPU Available:\", len(tf.config.list_physical_devices(\"GPU\")) > 0); print(\"GPU Devices:\", tf.config.list_physical_devices(\"GPU\"))'"
 }
