自動テストを追加

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,7 +17,16 @@
                 "python.formatting.provider": "autopep8",
                 "python.analysis.extraPaths": [
                     "/app"
-                ]
+                ],
+                "python.testing.unittestArgs": [
+                  "-v",
+                  "-s",
+                  ".",
+                  "-p",
+                  "test_*.py"
+                ],
+                "python.testing.pytestEnabled": false,
+                "python.testing.unittestEnabled": true
             }
         }
     },
